clang/test/BSC/Negative/Method/definition_3/definition_3.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct Foo;

int struct Foo::getA() { // expected-error {{variable has incomplete type 'struct Foo'}}
  return 0;
}

int main() {
  return 0;
}
